--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Personal Website of Navya Akshitha Sangishetty",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/snavyaakshitha/nas-code-chronicles"
+    "url": "git+https://github.com/snavyaakshitha/nas-code-chronicles.git"
   },
   "author": "navya akshitha sangishetty",
   "license": "MIT",
